# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "enterprise_device_management/services"

ohos_unittest("EdmDeviceSettingsProxyUnitTest") {
  module_out_path = module_output_path

  include_dirs = [
    "../include",
    "../mock/include",
    "../enterprise_device_mgr_proxy/enterprise_device_mgr_proxy_test",
  ]

  sources = [
    "../enterprise_device_mgr_proxy/enterprise_device_mgr_proxy_test/enterprise_device_mgr_stub_mock.cpp",
    "../mock/src/edm_sys_manager_mock.cpp",
    "../src/utils.cpp",
    "./device_settings_proxy_test.cpp",
  ]

  configs = [ "../../../common/config:coverage_flags" ]

  deps = [
    "../../../interfaces/inner_api:edmservice_kits",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "netmanager_base:net_conn_manager_if",
    "samgr:samgr_proxy",
  ]

  sanitize = {
    boundary_sanitize = true
    cfi = true
    debug = false
    integer_overflow = true
    stack_protector_ret = true
    ubsan = true
  }
  subsystem_name = "customization"
  part_name = "enterprise_device_management"
}

group("unittest") {
  testonly = true

  deps = [
    # deps file
    ":EdmDeviceSettingsProxyUnitTest",
  ]
}
