# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "enterprise_device_management/enterprise_device_management"

config("module_private_config") {
  visibility = [ ":*" ]
}

ohos_unittest("EdmPluginTest") {
  module_out_path = module_output_path

  include_dirs = [
    "../../../services/edm_plugin/include",
    "../../../services/edm_plugin/include/utils",
    "../../../services/edm_plugin/include/network",
    "../../../services/edm_plugin/include/network/executer",
    "../../../services/edm_plugin/include/network/rule",
    "../include",
    "./include",
    "./include/network",
    "./include/network/executer",
  ]

  sources = [
    "../src/utils.cpp",
    "./src/bundle_install_plugin_test.cpp",
    "./src/device_info_plugin_test.cpp",
    "./src/disable_bluetooth_plugin_test.cpp",
    "./src/disable_hdc_plugin_test.cpp",
    "./src/disable_microphone_plugin_test.cpp",
    "./src/disable_printer_plugin_test.cpp",
    "./src/set_wifi_disabled_plugin_test.cpp",
    "./src/disallow_add_local_account_plugin_test.cpp",
    "./src/disallow_modify_datetime_plugin_test.cpp",
    "./src/disallow_screen_shot_plugin_test.cpp",
    "./src/disallowed_running_bundles_plugin_test.cpp",
    "./src/display_manager_mock.cpp",
    "./src/domain_filter_rule_plugin_test.cpp",
    "./src/edm_data_ability_utils_mock.cpp",
    "./src/fingerprint_auth_plugin_test.cpp",
    "./src/firewall_rule_plugin_test.cpp",
    "./src/get_bluetooth_info_plugin_test.cpp",
    "./src/get_device_encryption_status_plugin_test.cpp",
    "./src/get_device_name_plugin_test.cpp",
    "./src/get_security_patch_tag_plugin_test.cpp",
    "./src/global_proxy_plugin_test.cpp",
    "./src/install_plugin_test.cpp",
    "./src/iptables_rule_plugin_test.cpp",
    "./src/is_wifi_active_plugin_test.cpp",
    "./src/location_policy_plugin_test.cpp",
    "./src/lock_screen_plugin_test.cpp",
    "./src/network/executer/domain_executer_test.cpp",
    "./src/network/executer/executer_factory_test.cpp",
    "./src/network/executer/executer_utils_mock.cpp",
    "./src/network/executer/executer_utils_test.cpp",
    "./src/network/executer/firewall_executer_test.cpp",
    "./src/network/executer/iexecuter_test.cpp",
    "./src/network/iptables_manager_test.cpp",
    "./src/network/rule/chain_rule_test.cpp",
    "./src/network/rule/domain_chain_rule_test.cpp",
    "./src/network/rule/firewall_chain_rule_test.cpp",
    "./src/network_manager_plugin_test.cpp",
    "./src/ntp_server_plugin_test.cpp",
    "./src/power_policy_plugin_test.cpp",
    "./src/reboot_plugin_test.cpp",

    #"./src/reset_factory_plugin_test.cpp",
    "./src/screen_off_time_plugin_test.cpp",
    "./src/set_browser_policies_plugin_test.cpp",
    "./src/set_wifi_profile_plugin_test.cpp",
    "./src/shutdown_plugin_test.cpp",
    "./src/uninstall_plugin_test.cpp",
    "./src/usb_read_only_plugin_test.cpp",
    "./src/user_cert_plugin_test.cpp",
  ]

  configs = [
    ":module_private_config",
    "../../../common/config:coverage_flags",
  ]

  deps = [
    ":edm_all_plugin_static",
    "../../../common/native:edm_commom",
    "../../../interfaces/inner_api:edmservice_kits",
    "../../../interfaces/inner_api/plugin_kits:plugin_kits",
    "../test_bundle/ohos_test:copy_ohos_test",
    "../test_bundle/right_hap:right",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "audio_framework:audio_client",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "certificate_manager:cert_manager_sdk",
    "common_event_service:cesfwk_innerkits",
    "drivers_interface_usb:libusb_proxy_1.0",
    "graphic_2d:surface",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "netmanager_base:net_conn_manager_if",
    "os_account:os_account_innerkits",
    "power_manager:powermgr_client",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "screenlock_mgr:screenlock_client",
    "usb_manager:usbsrv_client",
    "wifi:wifi_sdk",
    "window_manager:libdm",
  ]

  if (defined(global_parts_info) &&
      defined(global_parts_info.updater_update_service)) {
    external_deps += [ "update_service:updateservicekits" ]
  }

  sanitize = {
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    integer_overflow = true
    ubsan = true
    blocklist = "../cfi_blocklist.txt"
  }
  branch_protector_ret = "pac_ret"
  subsystem_name = "customization"
  part_name = "enterprise_device_management"
}

ohos_static_library("edm_all_plugin_static") {
  visibility = [ ":*" ]
  testonly = true
  sources = [
    "../../../services/edm_plugin/src/allowed_install_bundles_plugin.cpp",
    "../../../services/edm_plugin/src/bundle_install_plugin.cpp",
    "../../../services/edm_plugin/src/disable_bluetooth_plugin.cpp",
    "../../../services/edm_plugin/src/disable_hdc_plugin.cpp",
    "../../../services/edm_plugin/src/disable_microphone_plugin.cpp",
    "../../../services/edm_plugin/src/disable_printer_plugin.cpp",
    "../../../services/edm_plugin/src/set_wifi_disabled_plugin.cpp",
    "../../../services/edm_plugin/src/disabled_network_interface_plugin.cpp",
    "../../../services/edm_plugin/src/disallow_add_local_account_plugin.cpp",
    "../../../services/edm_plugin/src/disallow_modify_datetime_plugin.cpp",
    "../../../services/edm_plugin/src/disallow_screen_shot_plugin.cpp",
    "../../../services/edm_plugin/src/disallowed_install_bundles_plugin.cpp",
    "../../../services/edm_plugin/src/disallowed_running_bundles_plugin.cpp",
    "../../../services/edm_plugin/src/disallowed_uninstall_bundles_plugin.cpp",
    "../../../services/edm_plugin/src/domain_filter_rule_plugin.cpp",
    "../../../services/edm_plugin/src/fingerprint_auth_plugin.cpp",
    "../../../services/edm_plugin/src/firewall_rule_plugin.cpp",
    "../../../services/edm_plugin/src/get_all_network_interfaces_plugin.cpp",
    "../../../services/edm_plugin/src/get_bluetooth_info_plugin.cpp",
    "../../../services/edm_plugin/src/get_device_encryption_status_plugin.cpp",
    "../../../services/edm_plugin/src/get_device_name_plugin.cpp",
    "../../../services/edm_plugin/src/get_device_serial_plugin.cpp",
    "../../../services/edm_plugin/src/get_display_version_plugin.cpp",
    "../../../services/edm_plugin/src/get_ip_address_plugin.cpp",
    "../../../services/edm_plugin/src/get_mac_plugin.cpp",
    "../../../services/edm_plugin/src/get_security_patch_tag_plugin.cpp",
    "../../../services/edm_plugin/src/global_proxy_plugin.cpp",
    "../../../services/edm_plugin/src/install_plugin.cpp",
    "../../../services/edm_plugin/src/iptables_rule_plugin.cpp",
    "../../../services/edm_plugin/src/is_wifi_active_plugin.cpp",
    "../../../services/edm_plugin/src/location_policy_plugin.cpp",
    "../../../services/edm_plugin/src/lock_screen_plugin.cpp",
    "../../../services/edm_plugin/src/network/executer/domain_executer.cpp",
    "../../../services/edm_plugin/src/network/executer/executer_factory.cpp",
    "../../../services/edm_plugin/src/network/executer/executer_utils.cpp",
    "../../../services/edm_plugin/src/network/executer/firewall_executer.cpp",
    "../../../services/edm_plugin/src/network/executer/iexecuter.cpp",
    "../../../services/edm_plugin/src/network/iptables_manager.cpp",
    "../../../services/edm_plugin/src/network/rule/chain_rule.cpp",
    "../../../services/edm_plugin/src/network/rule/domain_chain_rule.cpp",
    "../../../services/edm_plugin/src/network/rule/firewall_chain_rule.cpp",
    "../../../services/edm_plugin/src/network/rule/rule_utils.cpp",
    "../../../services/edm_plugin/src/ntp_server_plugin.cpp",
    "../../../services/edm_plugin/src/power_policy_plugin.cpp",
    "../../../services/edm_plugin/src/reboot_plugin.cpp",
    "../../../services/edm_plugin/src/reset_factory_plugin.cpp",
    "../../../services/edm_plugin/src/screen_off_time_plugin.cpp",
    "../../../services/edm_plugin/src/set_browser_policies_plugin.cpp",
    "../../../services/edm_plugin/src/set_wifi_profile_plugin.cpp",
    "../../../services/edm_plugin/src/shutdown_plugin.cpp",
    "../../../services/edm_plugin/src/uninstall_plugin.cpp",
    "../../../services/edm_plugin/src/usb_read_only_plugin.cpp",
    "../../../services/edm_plugin/src/user_cert_plugin.cpp",
    "../../../services/edm_plugin/src/utils/domain_filter_rule_serializer.cpp",
    "../../../services/edm_plugin/src/utils/firewall_rule_serializer.cpp",
    "../../../services/edm_plugin/src/utils/http_proxy_serializer.cpp",
    "../../../services/edm_plugin/src/utils/install_param_serializer.cpp",
    "../../../services/edm_plugin/src/utils/installer_callback.cpp",
    "../../../services/edm_plugin/src/utils/uninstall_param_serializer.cpp",
    "../../../services/edm_plugin/src/utils/wifi_device_config_serializer.cpp",
  ]

  configs = [ "../../../common/config:coverage_flags" ]

  include_dirs = [
    "../../../services/edm_plugin/include",
    "../../../services/edm_plugin/include/utils",
    "../../../services/edm_plugin/include/network",
    "../../../services/edm_plugin/include/network/executer",
    "../../../services/edm_plugin/include/network/rule",
  ]

  deps = [
    "../../../common/native:edm_commom",
    "../../../interfaces/inner_api:edmservice_kits",
    "../../../interfaces/inner_api/plugin_kits:plugin_kits",
    "//third_party/bounds_checking_function:libsec_shared",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "audio_framework:audio_client",
    "bluetooth:btframework",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "certificate_manager:cert_manager_sdk",
    "common_event_service:cesfwk_innerkits",
    "drivers_interface_usb:libusb_proxy_1.0",
    "graphic_2d:surface",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "location:locator_sdk",
    "netmanager_base:net_conn_manager_if",
    "netmanager_base:netsys_controller",
    "netmanager_ext:ethernet_manager_if",
    "os_account:os_account_innerkits",
    "power_manager:powermgr_client",
    "screenlock_mgr:screenlock_client",
    "usb_manager:usbsrv_client",
    "wifi:wifi_sdk",
    "window_manager:libdm",
  ]

  if (defined(global_parts_info) &&
      defined(global_parts_info.updater_update_service)) {
    external_deps += [ "update_service:updateservicekits" ]
  }

  sanitize = {
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    integer_overflow = true
    ubsan = true
  }
  branch_protector_ret = "pac_ret"
  subsystem_name = "customization"
  part_name = "enterprise_device_management"
}

group("unittest") {
  testonly = true

  deps = [
    # deps file
    ":EdmPluginTest",
  ]
}
