# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/customization/enterprise_device_management/edm.gni")
import("//build/test.gni")

module_output_path = "enterprise_device_management/services"

config("module_private_config") {
  visibility = [ ":*" ]
}

ohos_unittest("EdmDeviceMgrAbilityUnitTest") {
  module_out_path = module_output_path

  include_dirs = [
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "$EDM_SA_ROOT/include",
    "$EDM_SA_ROOT/include/utils",
    "//commonlibrary/c_utils/base:utils_config",
    JSONCPP_INCLUDE_DIR,
    "$SUBSYSTEM_DIR/test/unittest/include",
    "$SUBSYSTEM_DIR/interfaces/inner_api/include",
    "$SUBSYSTEM_DIR/test/unittest/mock/include",
  ]

  sources = [
    "$SUBSYSTEM_DIR/test/unittest/mock/src/bundle_manager_mock.cpp",
    "$SUBSYSTEM_DIR/test/unittest/mock/src/edm_sys_manager_mock.cpp",
    "$SUBSYSTEM_DIR/test/unittest/src/cmd_utils.cpp",
    "./enterprise_device_mgr_ability_test/enterprise_device_mgr_ability_test.cpp",
  ]

  configs = [
    ":module_private_config",
    "//base/customization/enterprise_device_management/common/config:coverage_flags",
  ]

  deps = [
    "$EDM_INNERKITS_PATH:edmservice_kits",
    "$EDM_SA_ROOT:edmservice",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  subsystem_name = "customization"
  part_name = "enterprise_device_management"
}

group("unittest") {
  testonly = true

  deps = [
    # deps file
    ":EdmDeviceMgrAbilityUnitTest",
  ]
}
